--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,26 +1,35 @@
-# Variables de entorno
+# Dependencies
+node_modules/
+package-lock.json
+
+# Environment variables
 .env
 .env.local
-.env.production
+.env.*.local
 
-# Dependencias
-node_modules/
-
-# TypeScript
+# Build outputs
 dist/
-*.tsbuildinfo
+build/
+
+# Prisma
+prisma/.env
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 
-# Sistema operativo
+# OS
 .DS_Store
 Thumbs.db
 
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+
+# Temporary files
+tmp/
+temp/
