--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
+            "install": "^0.13.0",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "react": "^19.2.0",
